Minor edits to guidelines paper

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -66,12 +66,16 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (in review). For example, evaluating the assumptions that aggregate abundances are linearly related to log-odds of all CUs being above their lower benchmarks, observations are independent, and there are no influential outliers. In addition, the statistical significance of the predictor variable (aggregate abundance) and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using a performance metric called the hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
 
 
-We applied a single metric on spawner abundances to approximate CU-status because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression-based models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Pacific Salmon Status Scanner.
+We applied a single metric on spawner abundances to approximate CU-status when using the logistic regression approach because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression-based models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Pacific Salmon Status Scanner.
 
-Using a single-metric proxy for CU status also allowed us to use a statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments can be propagated to the development of the LRP and the assessment against that LRP. The model provides the probability of being below the LRP in the current year that explicitly accounts for uncertainty in CU-level assessments against their lower benchmarks.  
+Using a single-metric proxy for CU status also allowed us to use a statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments can be propagated to the development of the LRP and the assessment against that LRP. The fit logistic model allows the probability of being below the LRP in a given year to be predicted based on aggregate abundance, with the predicted probability explicitly accounting for uncertainty in CU-level assessments against their lower benchmarks.  
 
+<!--KH: Revised the last sentence of the above paragraph to be more descriptive.Is this ok? The original version was:
+The model provides the probability of being below the LRP in the current year that explicitly accounts for uncertainty in CU-level assessments against their lower benchmarks.  
 
-Furthermore, structural uncertainty in underlying assumptions about the basis of CU-level benchmarks, such as spawner-recruitment relationship can be addressed in at least three ways. First, the weight of evidence for various assumptions can be identified to identify the assumptions with the most support for underlying CU dynamics and CU status, which is then used for LRP development. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
+-->
+
+Furthermore, structural uncertainty in underlying assumptions made when developing CU-level benchmarks, such as the spawner-recruitment relationship, can be addressed in at least three ways. First, the weight of evidence for various assumptions can be evaluated <!--KH: changed indentifed to evaluated--> to identify the assumption with the most support <!--KH: suggestion to delete: for underlying CU dynamics and CU status-->, which is then used for LRP development. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
 
 Logistic regression-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Logistic regression-based LRPs use only one metric of spawner abundances, and therefore do not use the best available information (Principle 2) when CUs statuses rely on other metrics, such as trends in data-limited contexts. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (in review) for more details). In some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Pacific Salmon Status Scanner.
 
