--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -88,9 +88,9 @@ Reliability of estimation (Principle 4) depends on the reliability of underlying
 
 ### Projection-based LRPs {#projectedMethods}
 
-Similar to logistic regression-based LRPs, projection-based LRPs rely on an underlying relationship between aggregate abundances and status of component CUs. However, unlike for logistic regression-based LRPs, for projection-based LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from forward projections instead of historical data.  
+Similar to logistic regression-based LRPs, projection-based LRPs rely on an underlying relationship between aggregate abundances and status of component CUs to identify an LRP based on aggregate abundance. However, unlike logistic regression-based LRPs, for projection-based LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from forward projections instead of historical data.  
 
-The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run for 30 years after an initialization period to remove the impacts of initial conditions and identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S~gen~). We developed projection-based LRPs for SMUs that are managed under constant exploitation rates, though more complicated management procedures that include an observation component could be incorporated in future iterations. As for logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Rapid Multidimensional Scanner Tool because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Tool.
+The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run for multiple generations <!--KH: changed previous reference to 30 years to 'multiple geneations. Is this ok?--> after an initialization period to remove the impacts of initial conditions and identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S~gen~). We developed projection-based LRPs for SMUs that are managed under constant exploitation rates, though more complicated management procedures that include an observation component could be incorporated in future iterations. As for logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Rapid Multidimensional Scanner Tool because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Tool.
 
 One advantage of the approach for projection-based LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression-based LRPs, this method is not limited by historical data on CU status. To implement projection-based LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (in review) and provided online (see Appendix \@ref(app:first-appendix)).  
 
@@ -104,7 +104,7 @@ After providing parameter distributions describing the CU-level population dynam
 
       * Determine whether all CUs for each year-trial combination were above their CU-level lower benchmarks on abundances, or not.
       
-3. For each aggregate abundance bin, calculate the proportion for year-trial combinations where all CUs were above their lower benchmark relative to all year-trial combinations falling in that bin. These proportions are then ploted against the aggregated abundances for year bin (taken as the mid-point of the bin).
+3. For each aggregate abundance bin, calculate the proportion for year-trial combinations where all CUs were above their lower benchmark relative to all year-trial combinations falling in that bin. These proportions are then plotted against the aggregated abundances for year bin (taken as the mid-point of the bin).
       
 4. Identify the LRP as the mid-point of the aggregate abundance bin with a proportion of CUs above their lower benchmark that is closest to the desired probability threshold (e.g., 0.5, 0.66, 0.9, or 0.99).
 
@@ -116,7 +116,7 @@ knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 ```
 
 
-Similar to logistic regression-based LRPs, for projection-based LRPs the uncertainty in CU benchmarks and status are explicitly accounted for when deriving the probability of all CUs being above their lower benchmarks, but unlike logistic regression-based LRPs, there is no estimation uncertainty in projection-based LRPs because a logistic regression (or other model) is not required. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probability. Therefore 95% CIs are not provided. 
+Similar to logistic regression-based LRPs, for projection-based LRPs the uncertainty in CU benchmarks and status are explicitly accounted for when deriving the probability of all CUs being above their lower benchmarks. However, unlike logistic regression-based LRPs, there is no estimation uncertainty in projection-based LRPs because a logistic regression (or other model) is not required. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probability. Therefore, confidence intervals are not provided. 
 
 Also, similar to logistic regression based LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging by combining results form stochastic random trials across those structural assumptions. See our implementation for Interior Fraser Coho Salmon in Holt et al. (in review) for more details.
 
