--- a/caseStudyWP/appendix-chum.Rmd
+++ b/caseStudyWP/appendix-chum.Rmd
@@ -62,11 +62,11 @@ Two levels of infilling have previously been used for ISC Chum CUs (@holtEvaluat
 This applies to CUs and years when there were counts in some streams in the CU in a given year. For each stream, the geometric mean of escapement over all years was calculated as the stream's average escapement. Then the total average escapement for each CU in each year was the sum of the average escapements from all streams. Then a proportion of monitored escapement in each year was the sum of average escapement of all streams with counts in a year divided by the sum of the average escapements for all streams (counted and uncounted) in that CU. The infilled escapement for a CU in given year was the sum of the observed escapements for that CU and year divided by the proportion of the monitored escapement for that CU and year. 
 
 
-Infilling by stream typically made up a small proportion of the total escapement for each CU, with the exception of Howe Sound-Burrard Inlet. This was partly due to increasing escapements in the Cheakamus River and Indian River since 2000. This method assumes that escapement among streams is correlated, which is not always the case (see Fig. \@ref(fig:chum-spawner-corr) for correlatoins among CUs).<!--CH I added this Figure refence, but feel free to remove as it's the wrong scale, CUs not streams--> 
+Infilling by stream typically made up a small proportion of the total escapement for each CU, with the exception of Howe Sound-Burrard Inlet. This was partly due to increasing escapements in the Cheakamus River and Indian River since 2000. This method assumes that escapement among streams is correlated, which is not always the case (see Fig. \@ref(fig:chum-spawner-corr) for correlations among CUs).<!--CH I added this Figure refence, but feel free to remove as it's the wrong scale, CUs not streams--> 
 
 #### Infilling by CU
 
-If there were no counts of any streams in a CU in a given year, a second round of infilling was done with data set that had already been infilled by stream. This was the case for two CUs: Upper Knight (22 years: 1979-1980, 1982, 1984, 1989, 1991,1996,2004-18) and Bute Inlet (13 years: 2005-2006, 2008-2018). <!--CH Added this next sentence. okay?--> We describe this level of infilling below, though it was not applied for development of LRPs as it violates assumptions of independence among CUs.
+If there were no counts of any streams in a CU in a given year, a second round of infilling was done with data set that had already been infilled by stream. This was the case for two CUs: Upper Knight (22 years: 1979-1980, 1982, 1984, 1989, 1991,1996,2004-2018) and Bute Inlet (13 years: 2005-2006, 2008-2018). <!--CH Added this next sentence. okay?--> We describe this level of infilling below, though it was not applied for development of LRPs as it violates assumptions of independence among CUs.
 
 
 Using by-stream infilled escapement summed for each CU, the CUs and years with missing data were infilled assuming the total CU escapement was correlated between CUs. The procedure was similar to that for infilling by stream, but a geometric average for each CU across all years was used to calculate the proportion of the average for each year, and then that was used to estimate escapement for the two CUs with no observations.
