--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -175,7 +175,7 @@ where,
    (\#eq:SMSY)
 \end{equation}
 
-and $a$ is recruits-per-spawner at low productivity. Maximum likelihood estimates of S~REP~ values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish @liermannUsingAccessibleWatershed2010 (Table \@ref(chinook-benchmarks)). <!--CH: Add when developed (Appendix \@ref(), link to code in Appendix \@ref(github-appendix)). -->  <!--KH: Note that I have included a link the this appendix in the chapter 2 overview, where I mention that code for all case studies is in the appendix. So, it may not be necessary to include in each case study individually?-->
+and $a$ is recruits-per-spawner at low productivity. Maximum likelihood estimates of S~REP~ values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish @liermannUsingAccessibleWatershed2010 (Table \@ref(tab:chinook-benchmarks)). <!--CH: Add when developed (Appendix \@ref(), link to code in Appendix \@ref(github-appendix)). -->  <!--KH: Note that I have included a link the this appendix in the chapter 2 overview, where I mention that code for all case studies is in the appendix. So, it may not be necessary to include in each case study individually?-->
 
 Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006], (>7 recruits/spawner).  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. <!--CH Q: do you think I need to mention this? "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."  
 KH: As discussed via teams, I agree with leaving mention of the bias correction out.
@@ -186,8 +186,8 @@ KH: As discussed via teams, I agree with leaving mention of the bias correction 
 Our approach to estimating S~MSY~ (and S~gen~) differed from that of @parkenHabitatbasedMethodsEstimate2006, because we derived productivity independently from the life-stage specific models, whereas @parkenHabitatbasedMethodsEstimate2006 estimated both S~MSY~ and S~REP~ from the watershed-area model thereby inferring mean estimates of productivity, $a$. Those estimates of productivity which were deemed unrealistically high for WCVI Chinook, necessitating the life-stage modelling approach. 
 
 
-Approximate confidence intervals in  S~gen~ (Equation \@ref(eq:Sgen)) were estimated by repeated sampling of the normal distributions of S~REP~ and $\log(a)$, with standard deviations in log(S~REP~) derived from the watershed-area model. This method does not account for covariance between productivity and capacity typically found in stock-recruitment relationships, and will overestimate uncertainty in derived benchmarks. In future analyses we recommend Bayesian estimation of habitat-based benchmarks to facilitate integration of uncertainties from various sources. <!--CH: Catarina, does this last sentence (and the rest of the pgh) make sense. Please revise as you see fit. -->  
-<!--CH note: I change "bootstrapped CIs" to "approximate CIs,... calculated from repeated sampling"
+Approximate confidence intervals in  S~gen~ (Equation \@ref(eq:Sgen)) were estimated by repeated sampling of the normal distributions of S~REP~ and $\log(a)$, with standard deviations in log(S~REP~) derived from the watershed-area model. This method does not account for covariance between productivity and capacity typically found in stock-recruitment relationships, and will overestimate uncertainty in derived benchmarks. In future analyses we recommend Bayesian estimation of habitat-based benchmarks to facilitate integration of uncertainties from various sources. <!--CH: Catarina, does this last sentence (and the rest of the pgh) make sense. Please revise as you see fit. C"W: looks great to me. -->  
+<!--CH note: I change "bootstrapped CIs" to "approximate CIs,... calculated from repeated sampling"-->
 <!--CH notes: we used 95%CI of SREP to approximate the Bayesian posteriors for SREP (and resulting uncertainty in Sgen) --> 
 
 
