--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -527,7 +527,7 @@ We ran a sensitivity analysis under an alternative assumption where age proporti
 
 Projection-based LRPs were developed under the base-case assumptions of (1) interannual variability in exploitation rates among inlets with a CV = 0.085, (2) correlations in recruitment residuals among inlets equal to observed spawner correlations among inlets, and (3) variability in age proportions among CUs and years. We identified a provisional aggregate abundance LRP with p=0.5 (50% probability of all inlets being greater than their lower benchmark) equal to `r (read.csv("data/chinook-ProjectedLRPsbaseER_ALLp.csv")%>% pull(LRP))[1]` (Figure \@ref(fig:chinook-baseCaseProjLRP)). Provisional LRPs at p=0.66 ("likely" that all inlets are above their lower benchmarks) is also shown, near 20,000 (Figure \@ref(fig:chinook-baseCaseProjLRP)). Probabilities that all inlets exceeded lower benchmarks did not exceed 0.9, so LRPs at higher p values could not be estimated. Note that the LRP at p=0.66 requires more MC trials for full stabilization and is shown here for demonstration purposes only.
 
-```{r chinook-baseCaseProjLRP, echo=FALSE, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 50,000 MC Trials.  Each dot is the proportion of MC trials where all inlets were > lower benchmarks. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue) are highlighted, where p is the probability of all inlets being > their lower benchmarks.", out.width = '60%', fig.pos='!h'}
+```{r chinook-baseCaseProjLRP, echo=FALSE, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 50,000 MC Trials.  Each dot is the proportion of MC trials where all inlets were > lower benchmarks. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue) are highlighted, where p is the probability of all inlets being > their lower benchmarks.", out.width = '60%', fig.pos='!ht'}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/ProjectedLRPs/baseER-ProjLRPCurve-ALLp.png', './figure/chinook-baseER-ProjLRPCurve-ALLp.png',  mode="wb")
 
