--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -116,7 +116,7 @@ Because WSP Integrated status assessments are resources-intensive processes invo
 
 **Interim status**
 
-Given a proportion-based LRP of 100% of CUs above red status, when data deficient CUs are represented by CUs with data we refer to resulting status as 'interim' when all CUs included in assessment are above red status (Table \@ref(tab:GuidanceDDCUs2)). This 'interim status' is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the four criteria listed above are met, which underscores the value of monitoring and assessing all component CUs. Where data deficient CUs are not represented by CUs with data, and all CUs included in the assessment are above red status, then the SMU is considered data deficient and SMU status cannot be evaluated. In both cases, we recommend improved monitoring to fill CU-level assessment gaps.
+Given a proportion-based LRP of 100% of CUs above red status, when data deficient CUs are represented by CUs with data we refer to resulting status as 'interim' when all CUs included in assessment are above red status (Table \@ref(tab:GuidanceDDCUs)). This 'interim status' is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the four criteria listed above are met, which underscores the value of monitoring and assessing all component CUs. Where data deficient CUs are not represented by CUs with data, and all CUs included in the assessment are above red status, then the SMU is considered data deficient and SMU status cannot be evaluated. In both cases, we recommend improved monitoring to fill CU-level assessment gaps.
 
 When data are missing for one or more CUs, and at least one of data-rich CUs have red status, the LRP of 100% CUs above the red zone is considered breached, regardless of whether the data-deficient CUs are represented by data-rich CUs or not <!--(Table \@ref(tab:GuidanceDDCUs2))-->. A breach of the LRP (i.e., at least one CU with red status) can be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). Further monitoring of data-deficient CUs is still warranted in this case to inform status of remaining components of the SMU and associated rebuilding efforts. 
 
